[gd_scene load_steps=36 format=3 uid="uid://dleq5dgqfwlft"]

[ext_resource type="Script" uid="uid://csur0gy8ok8ut" path="res://Scripts/characterScripts/player.gd" id="1_g7okg"]
[ext_resource type="Texture2D" uid="uid://dl1n17hpb0tot" path="res://Assets/Sprites/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 01.png" id="2_2gxrt"]
[ext_resource type="Texture2D" uid="uid://dngvlt60xhocr" path="res://Assets/Sprites/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 02.png" id="3_gylx4"]
[ext_resource type="Texture2D" uid="uid://cjmxfl4fq4rm2" path="res://Assets/Sprites/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 03.png" id="4_efoa5"]
[ext_resource type="Texture2D" uid="uid://bs0mpb12vmc5l" path="res://Assets/Sprites/weapon bunny.png" id="5_0yx06"]
[ext_resource type="Texture2D" uid="uid://dtydw0qs48dkm" path="res://Assets/Sprites/fall sprite.png" id="8_y8fpx"]
[ext_resource type="PackedScene" uid="uid://bvke5ytd4g5gk" path="res://Scenes/item/progress_bar.tscn" id="13_dd8hs"]
[ext_resource type="Texture2D" uid="uid://bf1m6emniausf" path="res://Assets/Sprites/character/Character base bunny1.png" id="21_wsa0b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xgjqa"]
atlas = ExtResource("5_0yx06")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8hcq"]
atlas = ExtResource("5_0yx06")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqxi"]
atlas = ExtResource("5_0yx06")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxung"]
atlas = ExtResource("5_0yx06")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snsuu"]
atlas = ExtResource("8_y8fpx")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqfm3"]
atlas = ExtResource("8_y8fpx")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5yeq"]
atlas = ExtResource("21_wsa0b")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dowka"]
atlas = ExtResource("21_wsa0b")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efoa5"]
atlas = ExtResource("21_wsa0b")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rgrb"]
atlas = ExtResource("21_wsa0b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4axar"]
atlas = ExtResource("21_wsa0b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_npuvh"]
atlas = ExtResource("21_wsa0b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4nj7"]
atlas = ExtResource("21_wsa0b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eean"]
atlas = ExtResource("21_wsa0b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsa0b"]
atlas = ExtResource("21_wsa0b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd8hs"]
atlas = ExtResource("21_wsa0b")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lweyy"]
atlas = ExtResource("21_wsa0b")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d7pm"]
atlas = ExtResource("21_wsa0b")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5efei"]
atlas = ExtResource("21_wsa0b")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujoc3"]
atlas = ExtResource("21_wsa0b")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng8mv"]
atlas = ExtResource("21_wsa0b")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gxrt"]
atlas = ExtResource("21_wsa0b")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gylx4"]
atlas = ExtResource("21_wsa0b")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0yx06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2gxrt")
}, {
"duration": 1.0,
"texture": ExtResource("3_gylx4")
}, {
"duration": 1.0,
"texture": ExtResource("4_efoa5")
}],
"loop": false,
"name": &"airAttack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgjqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8hcq")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxung")
}],
"loop": false,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snsuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqfm3")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5yeq")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dowka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efoa5")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rgrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4axar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npuvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4nj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eean")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsa0b")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd8hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lweyy")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d7pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5efei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujoc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng8mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gxrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gylx4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y8fpx"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t4nj7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2gxrt"]
radius = 8.0
height = 18.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 2
script = ExtResource("1_g7okg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_0yx06")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_y8fpx")

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(6, -10)
shape = SubResource("CircleShape2D_t4nj7")
disabled = true

[node name="playerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHitbox"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_2gxrt")

[node name="ProgressBar" parent="." instance=ExtResource("13_dd8hs")]
offset_left = -9.0
offset_top = -33.0
offset_right = 10.0
offset_bottom = -28.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
